--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   provider: ^6.0.0
   url_strategy: ^0.2.0
   hive: ^2.2.3
+  url_launcher: ^6.1.6
 #  url_launcher: ^6.0.3
 #  shared_preferences: 2.0.5
 #  http: ^0.13.1
