--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   provider: ^6.0.0
   url_strategy: ^0.2.0
   hive: ^2.2.3
+  hive_flutter: ^1.1.0
   url_launcher: ^6.1.6
 #  shared_preferences: 2.0.5
 #  intl: ^0.17.0
