--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,10 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   url_launcher: ^6.1.6
+  transparent_image: ^2.0.0
+  cached_network_image: 3.0.0
+  image_picker: 0.8.6
+  image_picker_web: 3.0.0
 #  shared_preferences: 2.0.5
 #  intl: ^0.17.0
 #  google_fonts: ^2.0.0
