--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
     sdk: flutter
 
   http: ^0.13.5
+  http_parser: ^4.0.2
   provider: ^6.0.0
   url_strategy: ^0.2.0
   hive: ^2.2.3
